# data-engineering-on-gcp

./: kosol.text
01-introduction-to-data-engineering/: dog.json  dogs.json  extract.py  load.sh
03-setting-up-data-lake-using-google-cloud-storage/: main.py  pyproject.toml
04-building-data-pipelines-with-apache-airflow-cloud-composer/mnt/dags/: breakfast_product_pipelilne.py  credential.json  dog_api_pipeline.py  dogs.json  my_first_dag.py
my-project/: pyproject.toml
proj-sales-prediction/: cosmic-howl-411204-06aacc35b946.json  load_data_to_gcs_then_bigquery.py  pyproject.toml  upload_product_through_bigquery.py
